change layout in html

--- a/app.ipynb
+++ b/app.ipynb
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,19 +135,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[649, 50, 78, 892, 716, 766, 832, 43, 567, 913, 1757, 1506, 1153, 1368, 1234, 1608, 1320, 1099, 1279, 1616, 2540, 2289, 2913, 2204, 2699, 2755, 2317, 2618, 2311, 2993, 3378, 3199, 3161, 3489, 3761, 3145, 3316, 3487, 3093, 3896, 4312, 4089, 4006, 4764, 4082, 4478, 4464, 4452, 4568, 4573]\n"
+      "[5513, 5564, 5338, 5453, 5348, 5945, 5833, 5967, 5455, 5291, 6349, 6209, 6237, 6670, 6007, 6215, 6928, 6815, 6945, 6732, 7797, 7232, 7827, 7617, 7656, 7543, 7579, 7531, 7438, 7531, 8235, 8022, 8282, 8605, 8419, 8119, 8796, 8829, 8163, 8430, 9128, 9811, 9989, 9178, 9918, 9391, 9048, 9273, 9294, 9493]\n"
      ]
     }
    ],
    "source": [
     "print(w_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "w_list = [5000 + i for i in w_list]"
    ]
   },
   {
